Implementation of darkmode. Basic functionality working, altough: Some issues still pending: - [] Fix the color of the fonts on the website itself. - [] Fix the color of the outlines and borders of the buttons. - [] Create a tailwind.config.js file to manage dark mode and define all other properties collectively. [#37]

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,9 +3,16 @@
 :root {
   --background: #F5F3F0;
   --foreground: #171717;
+  --sidebar-bg: #fafafa;
 }
 
-@theme inline {
+:root.dark {
+  --background: #211F2A;  /* dunkler Hintergrund */
+  --foreground: #E4E3B6;  /* helle Schrift */
+  --sidebar-bg: #1A1821; /* dunkler Sidebar-Hintergrund */
+}
+
+:root {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
